--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,18 @@
 <resources>
     <string name="app_name">CM_project</string>
     <string name="title_activity_nota">NotaActivity</string>
+    <string name="entrar">ENTRAR</string>
+    <string name="nome_do_utilizador">Nome do Utilizador</string>
+    <string name="palavra_passe">Palavra-Passe</string>
+    <string name="entrarbtn">Entrar</string>
+    <string name="registar">Registar</string>
+    <string name="notas_pessoais">Notas Pessoais</string>
+    <string name="notas">NOTAS</string>
+    <string name="titulo">Titulo</string>
+    <string name="introduzir_titulo">Introduzir Titulo</string>
+    <string name="descri_o">Descrição</string>
+    <string name="introduzir_descri_o">Introduzir Descrição</string>
+    <string name="tipo">Tipo</string>
+    <string name="introduzir_tipo_de_nota">Introduzir Tipo de Nota</string>
+    <string name="guardar">Guardar</string>
 </resources>
